done fix 55 test and frond sse
